project(expat)

# configuration options
set(XML_CONTEXT_BYTES 1024)
set(XML_DTD ON)
set(XML_NS ON)

if(XML_DTD)
  set(XML_DTD 1)
else(XML_DTD)
  set(XML_DTD 0)
endif(XML_DTD)
if(XML_NS)
  set(XML_NS 1)
else(XML_NS)
  set(XML_NS 0)
endif(XML_NS)


if(UNIX)
  include(CheckIncludeFiles)
  include(CheckFunctionExists)
  include(CheckSymbolExists)
  include(TestBigEndian)
  include(CheckTypeSize)

  test_big_endian ( ENDIAN_TEST )
  if ( ENDIAN_TEST )
    set ( BYTEORDER 4321 )
  else ( )
    set ( BYTEORDER 1234 )
  endif ( )

  check_function_exists ( bcopy HAVE_BCOPY )
  if(HAVE_BCOPY)
    add_definitions(-DHAVE_BCOPY)
  endif()
  check_include_files ( dlfcn.h HAVE_DLFCN_H )
  if(HAVE_DLFCN_H)
    add_definitions(-DHAVE_DLFCN_H)
  endif()
  check_include_files ( fcntl.h HAVE_FCNTL_H )
  if(HAVE_FCNTL_H)
    add_definitions(-DHAVE_FCNTL_H)
  endif()
  check_function_exists ( getpagesize HAVE_GETPAGESIZE )
  if(HAVE_GETPAGESIZE)
    add_definitions(-DHAVE_GETPAGESIZE)
  endif()
  check_include_files ( inttypes.h HAVE_INTTYPES_H )
  if(HAVE_INTTYPES_H)
    add_definitions(-DHAVE_INTTYPES_H)
  endif()
  check_function_exists ( memmove HAVE_MEMMOVE )
  if(HAVE_MEMMOVE)
    add_definitions(-DHAVE_MEMMOVE)
  endif()
  check_include_files ( memory.h HAVE_MEMORY_H )
  if(HAVE_MEMORY_H)
    add_definitions(-DHAVE_MEMORY_H)
  endif()
  check_function_exists ( mmap HAVE_MMAP )
  if(HAVE_MMAP)
    add_definitions(-DHAVE_MMAP)
  endif()
  check_include_files ( stdint.h HAVE_STDINT_H )
  if(HAVE_STDINT_H)
    add_definitions(-DHAVE_STDINT_H)
  endif()
  check_include_files ( stdlib.h HAVE_STDLIB_H )
  if(HAVE_STDLIB_H)
    add_definitions(-DHAVE_STDLIB_H)
  endif()
  check_include_files ( strings.h HAVE_STRINGS_H )
  if(HAVE_STRINGS_H)
    add_definitions(-DHAVE_STRINGS_H)
  endif()
  check_include_files ( string.h HAVE_STRING_H )
  if(HAVE_STRING_H)
    add_definitions(-DHAVE_STRING_H)
  endif()
  check_include_files ( "sys/stat.h" HAVE_SYS_STAT_H )
  if(HAVE_SYS_STAT_H)
    add_definitions(-DHAVE_SYS_STAT_H)
  endif()
  check_include_files ( "sys/types.h" HAVE_SYS_TYPES_H )
  if(HAVE_SYS_TYPES_H)
    add_definitions(-DHAVE_SYS_TYPES_H)
  endif()
  check_include_files ( unistd.h HAVE_UNISTD_H )
  if(HAVE_UNISTD_H)
    add_definitions(-DHAVE_UNISTD_H)
  endif()


endif()

set(EXPAT_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/src" CACHE INTERNAL "")

include_directories(${EXPAT_INCLUDE_DIRS})


set(expat_SRCS
  src/xmlparse.c
  src/xmlrole.c
  src/xmltok.c
  src/xmltok_impl.c
  src/xmltok_ns.c
  )


add_library(expat STATIC ${expat_SRCS})
if(MSVC)
  set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/ignore:4996")
  target_compile_definitions(${PROJECT_NAME} PRIVATE XML_UNICODE_WCHAR_T XML_LARGE_SIZE XML_STATIC)
endif(MSVC)
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER external)

